Update to fix weird alignment in IE11

--- a/wm-gridfolio/jquery.wm-gridfolio-1.0.css
+++ b/wm-gridfolio/jquery.wm-gridfolio-1.0.css
@@ -31,6 +31,7 @@
 		-moz-box-sizing: border-box;
 	  	-webkit-box-sizing: border-box;   
 	  	box-sizing: border-box;
+	  	vertical-align: top;
 	}
 
 		.wmg-thumbnail{
